--- a/Rails-Seven-Seas/Gemfile
+++ b/Rails-Seven-Seas/Gemfile
@@ -11,8 +11,7 @@ gem 'rails', '~> 5.1.2'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 # Use Puma as the app server
-gem 'puma', '~> 3.7'
-# Use SCSS for stylesheets
+gem 'puma', '~> 4.0', '>= 4.0.1'
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
